Issue#SB-21097 Need to hide Scrollbar on right side in forum modal

--- a/src/app/client/src/app/modules/discussion/components/forum/forum.component.scss
+++ b/src/app/client/src/app/modules/discussion/components/forum/forum.component.scss
@@ -6,6 +6,8 @@
     padding: 0;
     border-radius: 0;
     overflow: hidden;
+    position: relative;
+    z-index: 2;
   }
   iframe {
     width: 100%;
@@ -25,7 +27,7 @@
       color: var(--white);
     }
   }
-  .o-y-hide {
-    overflow: hidden;
+  .o-y-auto {
+    overflow-y: auto;
   }
 }
